--- a/index.html
+++ b/index.html
@@ -14,6 +14,5 @@
     <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.svg" />
     <title>Rafael Martins | Neon</title>
   </head>
-  <body>
-  </body>
+  <body></body>
 </html>
