feat: create header

--- a/index.html
+++ b/index.html
@@ -14,5 +14,24 @@
     <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.svg" />
     <title>Rafael Martins | Neon</title>
   </head>
-  <body></body>
+  <body>
+    <!-- HEADER -->
+    <header>
+      <div class="container">
+        <a href="" class="logo">
+          <img src="./img/logo.svg" alt="Logo Neon" />
+        </a>
+        <nav>
+          <ul>
+            <li><a href="">Produtos Neon</a></li>
+            <li><a href="">Conta digital PJ</a></li>
+            <li><a href="">Quem somos</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Ajuda</a></li>
+          </ul>
+          <button class="btn-secondary white">Abra sua conta digital</button>
+        </nav>
+      </div>
+    </header>
+  </body>
 </html>
