feat: create section hero

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./scss/styles.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.svg" />
+    <link rel="stylesheet" href="scss/styles.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.svg" />
     <title>Rafael Martins | Neon</title>
   </head>
   <body>
@@ -19,7 +19,7 @@
     <header>
       <div class="container">
         <a href="" class="logo">
-          <img src="./img/logo.svg" alt="Logo Neon" />
+          <img src="img/logo.svg" alt="Logo Neon" />
         </a>
         <nav>
           <ul>
@@ -33,5 +33,71 @@
         </nav>
       </div>
     </header>
+
+    <!-- SECTION HERO -->
+    <section class="s-hero">
+      <div class="container">
+        <div class="text">
+          <h3>Abra sua conta, é só baixar o app!</h3>
+          <h1>A conta digital certa pra cuidar bem do seu dinheiro</h1>
+          <button class="btn-primary">Abra sua conta digital</button>
+          <ul>
+            <li>
+              <div class="icon">
+                <img
+                  src="img/icon-anuidade.svg"
+                  alt="Ícone de cartão de crédito"
+                />
+              </div>
+              <span
+                >Cartão sem<br />
+                anuidade</span
+              >
+            </li>
+            <li>
+              <div class="icon">
+                <img
+                  src="img/icon-conta-digital.svg"
+                  alt="Ícone de conta de digital"
+                />
+              </div>
+              <span
+                >Conta digital<br />
+                100% grátis</span
+              >
+            </li>
+            <li>
+              <div class="icon">
+                <img src="img/icon-dinheiro.svg" alt="Ícone de cifrão" />
+              </div>
+              <span
+                >Seu dinheiro<br />
+                rendendo mais</span
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="area-image">
+          <h2>Banco 100% digital</h2>
+          <div class="image">
+            <img
+              src="img/card-neon-front.png"
+              class="card-front"
+              alt="Imagem da frente do cartão do banco Neon"
+            />
+            <img
+              src="img/card-neon-back.png"
+              class="card-back"
+              alt="Imagem do verso do cartão do banco Neon"
+            />
+            <img
+              src="img/circle-cards-neon.svg"
+              class="circle"
+              alt="Imagem de um círculo branco no fundo"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
