--- a/index.html
+++ b/index.html
@@ -82,18 +82,149 @@
           <div class="image">
             <img
               src="img/card-neon-front.png"
-              class="card-front"
               alt="Imagem da frente do cartão do banco Neon"
+              class="card-front"
             />
             <img
               src="img/card-neon-back.png"
-              class="card-back"
               alt="Imagem do verso do cartão do banco Neon"
+              class="card-back"
             />
             <img
               src="img/circle-cards-neon.svg"
-              class="circle"
               alt="Imagem de um círculo branco no fundo"
+              class="circle"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SECTION CARD NEON -->
+    <section class="s-card-neon">
+      <div class="container">
+        <div class="left-area">
+          <div class="ilustra-mockup">
+            <img
+              src="img/circle-mockup.svg"
+              alt="Imagem de um círculo azul no fundo"
+              class="circle"
+            />
+            <img
+              src="img/mockup.svg"
+              alt="Imagem de um celular com as abas do aplicativo"
+              class="mockup"
+            />
+          </div>
+          <div class="text">
+            <div class="icon">
+              <img
+                src="img/icon-neon.svg"
+                alt="Ícone do banco Neon"
+                class="icon"
+              />
+            </div>
+            <div class="info-text">
+              <h3>Baixe nosso app</h3>
+              <p>
+                Que tal abrir uma conta digital para ver como a gente faz a sua
+                vida muito mais simples?
+              </p>
+              <ul>
+                <li>
+                  <a href="" target="_blank">
+                    <img
+                      src="img/apple-store.svg"
+                      alt="Botão para loja da Apple Store"
+                    />
+                  </a>
+                </li>
+                <li>
+                  <a href="" target="_blank">
+                    <img
+                      src="img/google-play.svg"
+                      alt="Botão para loja da Google Play"
+                    />
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="right-area">
+          <div class="main-text">
+            <h2>Resolva sua vida direto pelo app Neon!</h2>
+            <ul>
+              <li>
+                <div class="info">
+                  <img
+                    src="img/icon-cartao-credito.svg"
+                    alt="Cartão de crédito branco"
+                    class="icon"
+                  />
+                  <div class="txt">
+                    <h3>Cartão de crédito sem anuidade</h3>
+                    <p>
+                      Conta digital com cartão de crédito sem anuidade e sem
+                      complicação
+                    </p>
+                  </div>
+                </div>
+                <img src="img/arrow-right.svg" alt="Seta para direita" />
+              </li>
+              <li>
+                <div class="info">
+                  <img
+                    src="img/icon-taxas.svg"
+                    alt="Símbolo de porcentagem"
+                    class="icon"
+                  />
+                  <div class="txt">
+                    <h3>Sem taxas</h3>
+                    <p>
+                      Transferências, boletos de depósito e outros serviços
+                      gratuitos
+                    </p>
+                  </div>
+                </div>
+                <img src="img/arrow-right.svg" alt="Seta para direita" />
+              </li>
+              <li>
+                <div class="info">
+                  <img
+                    src="img/icon-investimentos.svg"
+                    alt="Símbolo de porcentagem"
+                    class="icon"
+                  />
+                  <div class="txt">
+                    <h3>Mais investimentos</h3>
+                    <p>
+                      Rendem mais que a poupança e você resgata quando quiser
+                    </p>
+                  </div>
+                </div>
+                <img src="img/arrow-right.svg" alt="Seta para direita" />
+              </li>
+            </ul>
+            <a href="" class="btn">Conheça outros produtos</a>
+          </div>
+          <div class="box-card">
+            <div class="text">
+              <h2>Neon Pejota</h2>
+              <h3>Contas digitais PJ gratuitas para decolar seu negócio!</h3>
+              <p>
+                As melhores contas para fazer pagamentos, compras e receber dos
+                seus clientes.
+              </p>
+              <div class="btns">
+                <button class="btn-primary">Sou MEI</button>
+                <button class="btn-primary">SOU ME</button>
+              </div>
+            </div>
+            <img
+              src="img/card-front-pj.svg"
+              alt="Parte da frente do cartão do banco Neon"
+              class="image"
             />
           </div>
         </div>
