chore: adjust responsive header

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
             <li><a href="">Ajuda</a></li>
           </ul>
           <button class="btn-secondary white">Abra sua conta digital</button>
+
+          <button class="btn-mobile">
+            <img
+              src="img/btn-mobile.svg"
+              alt="Ícone de Menu Mobile, três barras na horizontal"
+            />
+          </button>
         </nav>
       </div>
     </header>
