chore: adjust responsive section testimonials

--- a/index.html
+++ b/index.html
@@ -516,6 +516,20 @@
           el: ".s-testimonials .top .swiper-pagination",
           clickable: true,
         },
+        breakpoints: {
+          320: {
+            slidesPerView: 1.3,
+            spaceBetween: 16,
+          },
+          620: {
+            slidesPerView: 2.3,
+            spaceBetween: 15,
+          },
+          991: {
+            slidesPerView: 3,
+            spaceBetween: 32,
+          },
+        },
       });
     </script>
   </body>
