chore: adjust responsive footer

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
             </button>
           </div>
         </div>
-        <div class="mensagem">
+        <div class="message">
           <div class="icon">😀</div>
           <p>
             Oi! Leu até aqui? Você se preocupa com os mínimos detalhes, mesmo. A
