feat: add meta tags

--- a/index.html
+++ b/index.html
@@ -17,7 +17,40 @@
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.svg" />
-    <title>Rafael Martins | Neon</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Rafael Martins | Redesign Banco Neon</title>
+    <meta name="title" content="Rafael Martins | Redesign Banco Neon" />
+    <meta
+      name="description"
+      content="A conta digital certa pra cuidar bem do seu dinheiro"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://neon-rafaelmartins.netlify.app/" />
+    <meta property="og:title" content="Rafael Martins | Redesign Banco Neon" />
+    <meta
+      property="og:description"
+      content="A conta digital certa pra cuidar bem do seu dinheiro"
+    />
+    <meta property="og:image" content="https://neon-rafaelmartins.netlify.app/share-img.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://neon-rafaelmartins.netlify.app/"
+    />
+    <meta
+      property="twitter:title"
+      content="Rafael Martins | Redesign Banco Neon"
+    />
+    <meta
+      property="twitter:description"
+      content="A conta digital certa pra cuidar bem do seu dinheiro"
+    />
+    <meta property="twitter:image" content="https://neon-rafaelmartins.netlify.app/share-img.png" />
   </head>
   <body>
     <!-- HEADER -->
@@ -354,9 +387,24 @@
           <button class="btn-primary">Abra sua conta digital</button>
         </div>
         <div class="image">
-          <img src="img/mockup-01.svg" alt="" class="mockup-01" data-aos="fade-up" />
-          <img src="img/mockup-02.svg" alt="" class="mockup-02" data-aos="fade-down" />
-          <img src="img/circle-conta-digital.svg" alt="" class="circle" data-aos="zoom-in" />
+          <img
+            src="img/mockup-01.svg"
+            alt=""
+            class="mockup-01"
+            data-aos="fade-up"
+          />
+          <img
+            src="img/mockup-02.svg"
+            alt=""
+            class="mockup-02"
+            data-aos="fade-down"
+          />
+          <img
+            src="img/circle-conta-digital.svg"
+            alt=""
+            class="circle"
+            data-aos="zoom-in"
+          />
         </div>
       </div>
     </section>
