--- a/index.html
+++ b/index.html
@@ -60,11 +60,9 @@
   </head>
   <body>
     <!-- HEADER -->
-    <header>
+    <header id="js-header">
       <div class="container">
-        <a href="" class="logo">
-          <img src="img/logo.svg" alt="Logo Neon" />
-        </a>
+        <a href="" class="logo"></a>
         <nav>
           <ul>
             <li>
