feat: add menu mobile

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           </ul>
           <button class="btn-secondary white">Abra sua conta digital</button>
 
-          <button class="btn-mobile">
+          <button class="btn-mobile" id="js-btn-menu-mobile">
             <img
               src="img/btn-mobile.svg"
               alt="Ícone de Menu Mobile, três barras na horizontal"
@@ -106,6 +106,24 @@
         </nav>
       </div>
     </header>
+
+    <!-- MENU MOBILE -->
+    <div class="menu-mobile">
+      <div class="overlay js-overlay-menu"></div>
+      <aside>
+        <img src="./img/logo-neon-color.svg" alt="" class="logo" />
+
+        <nav>
+          <ul>
+            <li><a href="" class="js-btn-dropdown">Produtos Neon</a></li>
+            <li><a href="" class="js-btn-dropdown">Conta digital PJ</a></li>
+            <li><a href="" class="js-btn-dropdown">Quem somos</a></li>
+            <li><a href="" class="js-btn-dropdown">Blog</a></li>
+            <li><a href="" class="js-btn-dropdown">Ajuda</a></li>
+          </ul>
+        </nav>
+      </aside>
+    </div>
 
     <!-- SECTION HERO -->
     <section class="s-hero">
