refactor: change project theme

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.svg" />
 
     <!-- Primary Meta Tags -->
-    <title>Rafael Martins | Redesign Banco Neon</title>
-    <meta name="title" content="Rafael Martins | Redesign Banco Neon" />
+    <title>Rafael Martins | Banco B-one</title>
+    <meta name="title" content="Rafael Martins |  Banco B-one" />
     <meta
       name="description"
       content="A conta digital certa pra cuidar bem do seu dinheiro"
@@ -28,26 +28,26 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://neon-rafaelmartins.netlify.app/" />
-    <meta property="og:title" content="Rafael Martins | Redesign Banco Neon" />
+    <meta property="og:url" content="https://bone-rafaelmartins.netlify.app/" />
+    <meta property="og:title" content="Rafael Martins | Banco B-one" />
     <meta
       property="og:description"
       content="A conta digital certa pra cuidar bem do seu dinheiro"
     />
     <meta
       property="og:image"
-      content="https://neon-rafaelmartins.netlify.app/share-img.png"
+      content="https://bone-rafaelmartins.netlify.app/share-img.png"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:url"
-      content="https://neon-rafaelmartins.netlify.app/"
+      content="https://bone-rafaelmartins.netlify.app/"
     />
     <meta
       property="twitter:title"
-      content="Rafael Martins | Redesign Banco Neon"
+      content="Rafael Martins | Banco Bone"
     />
     <meta
       property="twitter:description"
@@ -55,7 +55,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://neon-rafaelmartins.netlify.app/share-img.png"
+      content="https://bone-rafaelmartins.netlify.app/share-img.png"
     />
   </head>
   <body>
@@ -66,7 +66,7 @@
         <nav>
           <ul>
             <li>
-              <a href="" class="js-btn-dropdown">Produtos Neon</a>
+              <a href="" class="js-btn-dropdown">Produtos B-one</a>
               <div class="dropdown js-dropdown">
                 <div class="item">
                   <strong>Cartão de crédito</strong>
@@ -74,11 +74,11 @@
                 </div>
                 <div class="item">
                   <strong>Cartão pré-pago</strong>
-                  <p>Cartão de débito internacional Neon</p>
+                  <p>Cartão de débito internacional B-one</p>
                 </div>
                 <div class="item">
-                  <strong>Neon Mais</strong>
-                  <p>4 saques grátis para quem compra com a Neon</p>
+                  <strong>B-one Mais</strong>
+                  <p>4 saques grátis para quem compra com a B-one</p>
                 </div>
                 <div class="item">
                   <strong>Investimentos</strong>
@@ -111,11 +111,11 @@
     <div class="menu-mobile">
       <div class="overlay js-overlay-menu"></div>
       <aside>
-        <img src="./img/logo-neon-color.svg" alt="" class="logo" />
+        <img src="./img/logo-bone-color.svg" alt="" class="logo" />
 
         <nav>
           <ul>
-            <li><a href="" class="js-btn-dropdown">Produtos Neon</a></li>
+            <li><a href="" class="js-btn-dropdown">Produtos B-one</a></li>
             <li><a href="" class="js-btn-dropdown">Conta digital PJ</a></li>
             <li><a href="" class="js-btn-dropdown">Quem somos</a></li>
             <li><a href="" class="js-btn-dropdown">Blog</a></li>
@@ -172,17 +172,17 @@
           <h2 data-aos="fade-left">Banco 100% digital</h2>
           <div class="image" data-aos="zoom-in">
             <img
-              src="img/card-neon-front.png"
-              alt="Imagem da frente do cartão do banco Neon"
+              src="img/card-bone-front.png"
+              alt="Imagem da frente do cartão do banco B-one"
               class="card-front"
             />
             <img
-              src="img/card-neon-back.png"
-              alt="Imagem do verso do cartão do banco Neon"
+              src="img/card-bone-back.png"
+              alt="Imagem do verso do cartão do banco B-one"
               class="card-back"
             />
             <img
-              src="img/circle-cards-neon.svg"
+              src="img/circle-cards-bone.svg"
               alt="Imagem de um círculo branco no fundo"
               class="circle"
             />
@@ -191,8 +191,8 @@
       </div>
     </section>
 
-    <!-- SECTION CARD NEON -->
-    <section class="s-card-neon">
+    <!-- SECTION CARD B-ONE -->
+    <section class="s-card-bone">
       <div class="container">
         <div class="left-area">
           <div class="ilustra-mockup">
@@ -212,8 +212,8 @@
           <div class="text" data-aos="fade-up">
             <div class="icon">
               <img
-                src="img/icon-neon.svg"
-                alt="Ícone do banco Neon"
+                src="img/icon-bone.svg"
+                alt="Ícone do banco B-one"
                 class="icon"
               />
             </div>
@@ -246,7 +246,7 @@
         </div>
         <div class="right-area">
           <div class="main-text" data-aos="fade-left">
-            <h2>Resolva sua vida direto pelo app Neon!</h2>
+            <h2>Resolva sua vida direto pelo app B-one!</h2>
             <ul>
               <li>
                 <div class="info">
@@ -303,7 +303,7 @@
           </div>
           <div class="box-card" data-aos="fade-left">
             <div class="text">
-              <h2>Neon Pejota</h2>
+              <h2>B-one Pejota</h2>
               <h3>Contas digitais PJ gratuitas para decolar seu negócio!</h3>
               <p>
                 As melhores contas para fazer pagamentos, compras e receber dos
@@ -316,7 +316,7 @@
             </div>
             <img
               src="img/card-front-pj.svg"
-              alt="Parte da frente do cartão do banco Neon"
+              alt="Parte da frente do cartão do banco B-one"
               class="image"
             />
           </div>
@@ -344,8 +344,8 @@
                   <img src="img/icon-twiiter.svg" alt="Ícone do Twitter" />
                 </div>
                 <p>
-                  Valeu @banconenon! Linda embalagem e o cartão tbm é lindo!
-                  Muito amor por esse banco #bancoNeon
+                  Valeu @bancobone! Linda embalagem e o cartão tbm é lindo!
+                  Muito amor por esse banco #bancoBeon
                 </p>
               </div>
             </div>
@@ -356,7 +356,7 @@
                   <img src="img/icon-twiiter.svg" alt="Ícone do Twitter" />
                 </div>
                 <p>
-                  Eu uso o Neon pra render o pouquinho que eu tenho. Como disse
+                  Eu uso o B-one pra render o pouquinho que eu tenho. Como disse
                   minha amiga Bruna, um dia eu abro o app de novo e PA: tô rica.
                 </p>
               </div>
@@ -380,8 +380,8 @@
                   <img src="img/icon-twiiter.svg" alt="Ícone do Twitter" />
                 </div>
                 <p>
-                  Valeu @banconenon! Linda embalagem e o cartão tbm é lindo!
-                  Muito amor por esse banco #bancoNeon
+                  Valeu @bancobone! Linda embalagem e o cartão tbm é lindo!
+                  Muito amor por esse banco #bancoBeon
                 </p>
               </div>
             </div>
@@ -496,7 +496,7 @@
         <div class="main">
           <nav>
             <div class="item">
-              <strong>Produtos Neon</strong>
+              <strong>Produtos B-one</strong>
               <ul>
                 <li>
                   <a href="">Cartão de crédito</a>
@@ -505,7 +505,7 @@
                   <a href="">Cartão pré-pago</a>
                 </li>
                 <li>
-                  <a href="">Neon Mais</a>
+                  <a href="">B-one Mais</a>
                 </li>
                 <li>
                   <a href="">Investimentos</a>
@@ -547,7 +547,7 @@
               <strong>Institucional</strong>
               <ul>
                 <li>
-                  <a href="">Conheça a Neon</a>
+                  <a href="">Conheça a B-one</a>
                 </li>
                 <li>
                   <a href="">Trabalhe conosco</a>
@@ -577,14 +577,14 @@
               <img src="img/envelope.svg" alt="" />
               <div class="info">
                 <strong>Atendimento:</strong>
-                <span>oi@neon.com.br (24 horas)</span>
+                <span>oi@bone.com.br (24 horas)</span>
               </div>
             </button>
             <button>
               <img src="img/chat.svg" alt="" />
               <div class="info">
                 <strong>Imprensa:</strong>
-                <span>imprensa@neon.com.br</span>
+                <span>imprensa@bone.com.br</span>
               </div>
             </button>
           </div>
@@ -593,7 +593,7 @@
           <div class="icon">😀</div>
           <p>
             Oi! Leu até aqui? Você se preocupa com os mínimos detalhes, mesmo. A
-            gente também. Por isso o time Neon está sempre trabalhando para
+            gente também. Por isso o time B-one está sempre trabalhando para
             fazer a conta digital perfeita para você ; )
           </p>
         </div>
